--- a/src/pages/weather/weather.html
+++ b/src/pages/weather/weather.html
@@ -1,20 +1,25 @@
 <ion-header>
     <ion-navbar>
-        <ion-title>
-            Weather Page
+        <ion-title *ngIf="current">
+           {{ location.name }}
         </ion-title>
     </ion-navbar>
 </ion-header>
 
 <ion-content class="weather" padding>
-    <div *ngIf="current">
-        <h2>{{ location.name }}</h2>
-        <p>Temperature {{ current.temp_c }}º</p>
-        <p>Humidity {{ current.humidity}}%</p>
-        <p>Feels like {{ current.feelslike_c }}º</p>
-    </div>
+    <ion-grid class="current" *ngIf="current">
+        <ion-row>
+            <ion-col>
+                <div class="temperature">{{ current.temp_c }}º</div>
+            </ion-col>
+            <ion-col>
+                <div class="humidity">Humidity {{ current.humidity}}%</div>
+                <div class="feelslike">Feels like {{ current.feelslike_c }}º</div>
+                <div class="wind">Wind {{ current.wind_mph }} mph</div>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
     
-    <h2>Forecast</h2>
     <ion-segment *ngIf="forecast" [(ngModel)]="segmentSelected" 
                  (ionChange)="segmentChanged($event)">
         <ion-segment-button value="0">
