Switch into grid layout

--- a/src/pages/weather/weather.html
+++ b/src/pages/weather/weather.html
@@ -9,7 +9,7 @@
 <ion-content class="weather" padding>
     <ion-grid class="current" *ngIf="current">
         <ion-row>
-            <ion-col>
+            <ion-col col-5>
                 <div class="temperature">{{ current.temp_c }}º</div>
             </ion-col>
             <ion-col>
@@ -19,31 +19,37 @@
             </ion-col>
         </ion-row>
     </ion-grid>
-    
-    <ion-segment *ngIf="forecast" [(ngModel)]="segmentSelected" 
-                 (ionChange)="segmentChanged($event)">
-        <ion-segment-button value="0">
-            Today
-        </ion-segment-button>
-        <ion-segment-button value="1">
-            Tomorrow
-        </ion-segment-button>
-        <ion-segment-button value="2">
-            After tomorrow
-        </ion-segment-button>
-    </ion-segment>
-    <div class="scrollable" *ngIf="daySelected">
-        <ion-list>
-            <ion-scroll scrollY="true">
-                <ion-item *ngFor="let hour of daySelected.hour">
-                    <ion-avatar item-left>
-                        <img [src]="hour.condition.icon">
-                    </ion-avatar>
-                    <p>Temperature {{ hour.temp_c}}º</p>
-                    <p>Feels like {{ hour.feelslike_c}}º</p>                
-                    <p>Humidity {{ hour.humidity}}%</p>
-                </ion-item>
-            </ion-scroll>
-        </ion-list>
-    </div>
+    <ion-grid>
+        <ion-row *ngIf="forecast">
+            <ion-col>
+                <ion-segment [(ngModel)]="segmentSelected" (ionChange)="segmentChanged($event)">
+                    <ion-segment-button value="0">
+                        Today
+                    </ion-segment-button>
+                    <ion-segment-button value="1">
+                        Tomorrow
+                    </ion-segment-button>
+                    <ion-segment-button value="2">
+                        After tomorrow
+                    </ion-segment-button>
+                </ion-segment>
+            </ion-col>
+        </ion-row>
+        <ion-row *ngIf="daySelected">
+            <ion-col>
+                <ion-list class="scrollable">
+                    <ion-scroll scrollY="true">
+                        <ion-item *ngFor="let hour of daySelected.hour">
+                            <ion-avatar item-left>
+                                <img [src]="hour.condition.icon">
+                            </ion-avatar>
+                            <p>Temperature {{ hour.temp_c}}º</p>
+                            <p>Feels like {{ hour.feelslike_c}}º</p>                
+                            <p>Humidity {{ hour.humidity}}%</p>
+                        </ion-item>
+                    </ion-scroll>
+                </ion-list>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 </ion-content>
