--- a/src/pages/weather/weather.html
+++ b/src/pages/weather/weather.html
@@ -7,8 +7,8 @@
 </ion-header>
 
 <ion-content class="weather" padding>
-    <ion-grid class="current" *ngIf="current">
-        <ion-row>
+    <ion-grid class="current">
+        <ion-row  *ngIf="current">
             <ion-col col-5>
                 <div class="temperature">{{ current.temp_c }}º</div>
             </ion-col>
@@ -34,13 +34,9 @@
             </ion-col>
         </ion-row>
     </ion-grid>
-    <ion-grid class="forecast">
-        <ion-row *ngIf="daySelected">
-            <ion-col>
-                <ion-row *ngFor="let hour of daySelected.hour">
-                    <forecast-item [hour]="hour"></forecast-item>
-                </ion-row>
-            </ion-col>
+    <ion-grid class="forecast" *ngIf="daySelected">
+        <ion-row *ngFor="let hour of daySelected.hour">
+            <forecast-item [hour]="hour"></forecast-item>
         </ion-row>
     </ion-grid>
 </ion-content>
