--- a/src/pages/weather/weather.html
+++ b/src/pages/weather/weather.html
@@ -23,7 +23,7 @@
         <ion-row class="condition-text">
             <ion-col>
                 <div>
-                    <ion-icon class="weather-icon" name="wi-{{current.condition.lowertext}}"></ion-icon>  {{ current.condition.text }} 
+                    {{ current.condition.text }} 
                 </div>
             </ion-col>
         </ion-row>
@@ -33,8 +33,8 @@
             </ion-col>
         </ion-row>
     </ion-grid>
-    <ion-grid class="more-info">
-        <ion-row *ngIf="current">
+    <ion-grid *ngIf="current" class="more-info">
+        <ion-row>
             <ion-col col-4>
                 <ion-row>
                     <ion-icon name="water"></ion-icon>
