Added new forecast section with hours

--- a/src/pages/weather/weather.html
+++ b/src/pages/weather/weather.html
@@ -87,6 +87,15 @@
         <ion-row>
             <ion-col>
                 <ion-scroll scrollX="true">
+                    <forecast-item *ngFor="let hour of today.hour" class="scroll-item selectable-icon" [hour]="hour"></forecast-item>
+                </ion-scroll>
+            </ion-col> 
+        </ion-row>
+    </ion-grid>
+    <ion-grid class="forecast" *ngIf="forecast">
+        <ion-row>
+            <ion-col>
+                <ion-scroll scrollX="true">
                     <forecast-item *ngFor="let day of forecast" class="scroll-item selectable-icon" [day]="day"></forecast-item>
                 </ion-scroll>
             </ion-col> 
