--- a/src/pages/weather/weather.html
+++ b/src/pages/weather/weather.html
@@ -86,7 +86,7 @@
     <ion-grid class="forecast">
         <ion-row>
             <ion-col>
-                <ion-scroll scrollX="true">
+                <ion-scroll class="hourly" scrollX="true">
                     <forecast-item *ngFor="let hour of today.hour" class="scroll-item selectable-icon" [hour]="hour"></forecast-item>
                 </ion-scroll>
             </ion-col> 
@@ -95,7 +95,7 @@
     <ion-grid class="forecast" >
         <ion-row>
             <ion-col>
-                <ion-scroll scrollX="true">
+                <ion-scroll class="daily" scrollX="true">
                     <forecast-item [forecastClickable]="day" *ngFor="let day of forecast" class="scroll-item selectable-icon" [day]="day" padding></forecast-item>
                 </ion-scroll>
             </ion-col> 
@@ -105,10 +105,13 @@
         <ion-row>
             <ion-col col-3 *ngFor="let phase of moonphases">
                 <ion-row>
-                    {{ phase.phase }}
+                    {{ phase.text }}
                 </ion-row>
                 <ion-row>
                     <img height="32" width="32" [src]="phase.img">
+                </ion-row>
+                <ion-row>
+                    {{ phase.newDate }}
                 </ion-row>
                 <ion-row>
                     {{ phase.time }}
