Update weather page styles

--- a/src/pages/weather/weather.html
+++ b/src/pages/weather/weather.html
@@ -8,7 +8,7 @@
 
 <ion-content class="weather" *ngIf="forecast" padding>
     <ion-grid class="current-info">
-        <ion-row>
+        <ion-row margin-top>
             <ion-col class="temperature-col">
                 <div class="temperature">
                     {{ current.temp_c }}
