--- a/src/pages/weather/weather.html
+++ b/src/pages/weather/weather.html
@@ -6,7 +6,7 @@
     </ion-navbar>
 </ion-header>
 
-<ion-content class="weather" *ngIf="forecast" padding>
+<ion-content class="weather" *ngIf="current" padding>
     <ion-grid class="current-info">
         <ion-row margin-top>
             <ion-col class="temperature-col">
@@ -61,25 +61,25 @@
                 <ion-row>
                     <ion-icon name="wi-sunrise"></ion-icon>
                 </ion-row>
-                <ion-row>{{ current.astro.sunrise }}</ion-row>
+                <ion-row>{{ astro.sunrise }}</ion-row>
             </ion-col>
             <ion-col col-3>
                 <ion-row>
                     <ion-icon name="wi-sunny"></ion-icon>
                 </ion-row>
-                <ion-row>{{ current.astro.sunset }}</ion-row>
+                <ion-row>{{ astro.sunset }}</ion-row>
             </ion-col>
             <ion-col col-3>
                 <ion-row>
                     <ion-icon name="wi-weather2"></ion-icon>
                 </ion-row>
-                <ion-row>{{ current.astro.moonrise }}</ion-row>
+                <ion-row>{{ astro.moonrise }}</ion-row>
             </ion-col>
             <ion-col col-3>
                 <ion-row>
                     <ion-icon name="wi-moon"></ion-icon>
                 </ion-row>
-                <ion-row>{{ current.astro.moonset }}</ion-row>
+                <ion-row>{{ astro.moonset }}</ion-row>
             </ion-col>
         </ion-row>
     </ion-grid>
