--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,6 +13,6 @@
   </ion-item>
   <div *ngIf="results.length === 0" class="no-results">
     <p text-center>You don't have any results,</p>
-    <p text-center> please try to search a place :)</p>
+    <p text-center>please try introducing your city name.</p>
   </div>
 </ion-content>
